Added move constructor/assignment

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,14 @@
 
-%.o: %.cc
-	g++ -c -I. $^
+all: test1 test2
+
+%.o: %.cc 
+	g++ -c -Wall -O2 -std=c++11 -I. $^
 
 test1: test1.o
 	g++ -o test1 test1.o
+
+test2: test2.o 
+	g++ -o test2 test2.o
 
 run_tests: test1 test1.req
 	./test1 > test1.res
