--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@
 all: test1 test2
 
 %.o: %.cc 
-	g++ -c -Wall -O2 -std=c++11 -I. $^
+	g++ -g -c -Wall -O2 -std=c++11 -I. $^
 
 test1: test1.o
 	g++ -o test1 test1.o
