--- a/doc/doxygen_tree.config
+++ b/doc/doxygen_tree.config
@@ -81,7 +81,7 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = src/tree.hh
+INPUT                  = doc/main.md src/tree.hh
 FILE_PATTERNS          = *.c \
                          *.cc \
                          *.cxx \
