--- a/src/Makefile
+++ b/src/Makefile
@@ -13,6 +13,9 @@ test2: test2.o
 test_tree: test_tree.o
 	g++ -o test_tree test_tree.o
 
+sample_path: sample_path.o
+	g++ -o sample_path sample_path.o
+
 run_tests: test1 test1.req
 	./test1 > test1.res
 	@diff test1.res test1.req
